<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    style="@style/TextStyleHeader"
                    android:text="@string/id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvId"
                    android:text="---"
                    style="@style/TextStyleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    style="@style/TextStyleHeader"
                    android:text="@string/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTitle"
                    android:text="---"
                    style="@style/TextStyleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/TextStyleHeader"
                    android:text="@string/sub_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvSubTitle"
                    android:text="---"
                    style="@style/TextStyleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/TextStyleHeader"
                    android:text="@string/body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvBody"
                    android:text="---"
                    style="@style/TextStyleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    style="@style/TextStyleHeader"
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvDate"
                    android:text="---"
                    style="@style/TextStyleContent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>